--- a/static/sass/custom.scss
+++ b/static/sass/custom.scss
@@ -171,22 +171,56 @@ footer {
 	-moz-box-shadow: 0 8px 10px -6px #ddd;
 	box-shadow: 0 8px 10px -6px #ddd;
         /* padding: 10px; */
-        height: 350px;
+        height: auto;
         margin: 15px auto;
         position: relative;
 
-
-        .thumbnail {
+        .thumb {
             width: 100%;
             height: 200px;
-            border: none;
-            border-radius: 0;
-            padding: 0;
+            position: relative;
+            margin-bottom: 20px;
 
-            .please {
-                background-color: #aaa;
+            .thumbnail {
+                position: absolute;
+                top: 0;
+                bottom: 0;
+                left: 0;
                 width: 100%;
                 height: 100%;
+                border: none;
+                border-radius: 0;
+                padding: 0;
+
+                .please {
+                    background-color: #aaa;
+                    width: 100%;
+                    height: 100%;
+                }
+            }
+
+            .thumbnail-hover {
+                display: table-cell;
+                position: absolute;
+                top: 0;
+                left: 0;
+                bottom: 0;
+                width: 100%;
+                height: 100%;
+                border: none;
+                background-color: #0c0c0c;
+                opacity: 0.9;
+                display: none;
+
+                .add-tag {
+                    margin: auto;
+                    position: absolute;
+                    top: 0; left: 0; bottom: 0; right: 0;
+                    width: 200px;
+                    height: 30px;
+                    text-align: center;
+                    font-variant: small-caps;
+                }
             }
         }
 
@@ -209,17 +243,32 @@ footer {
 
         .domain {
             color: $black;
-            position: absolute;
-            bottom: 10px;
-            left: 10px;
-            right: 10px;
             display: block;
-            padding-top: 10px;
-            /* border-top: 1px solid lighten($primary-color, 30%); */
+            padding: 10px;
         }
     }
 }
 
+.tags {
+    padding: 10px;
+    font-variant: small-caps;
+
+    .tag {
+        border: 1px solid $soft-black;
+        background-color: #fff;
+        padding: 3px 6px;
+        margin: 3px;
+        margin-left: 0;
+        display: inline-block;
+        color: $soft-black;
+        transition: all 0.3s ease;
+
+        &:hover {
+            background-color: $primary-color;
+            color: $light-white;
+        }
+    }
+}
 
 /* footer */
 .page-wrap {
