footer class added for removing conflicts

--- a/templates/base.html
+++ b/templates/base.html
@@ -165,7 +165,7 @@
 
 
   {% block footer %}
-  <footer>
+  <footer class="rp">
     <div class="text-center">
       made with <i class="fa fa-heart-o"></i> in ankara
     </div>
@@ -176,8 +176,10 @@
 
   {% assets "js_all" %}
     <script type="text/javascript" src="{{ ASSET_URL }}"></script>
-    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/pleasejs/0.2.0/Please.min.js"></script>
+    <script type="text/javascript"
+            src="http://cdnjs.cloudflare.com/ajax/libs/pleasejs/0.2.0/Please.min.js"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/readingpub.js')}}"></script>
+
 
   {% endassets %}
 
