--- a/static/sass/custom.scss
+++ b/static/sass/custom.scss
@@ -44,7 +44,7 @@ header.rp {
     }
 }
 
-footer {
+footer.rp {
     width: 100%;
     height: 60px;
     /* margin-top: 50px; */
@@ -158,6 +158,13 @@ footer {
         display: block;
     }
 
+    blockquote {
+        border-left: 5px solid $primary-color;
+
+        p {
+            margin: 0;
+        }
+    }
 }
 
 .posts {
@@ -270,6 +277,56 @@ footer {
     }
 }
 
+.highlight-wrapper {
+    position: absolute;
+    z-index: 2;
+    display: none;
+
+    .highlight {
+        position: absolute;
+        z-index: 3;
+        border: 1px solid $soft-black;
+        border-radius: 5px;
+        background-color: $black;
+        color: $light-white;
+        display: block;
+        margin: auto;
+        width: 100px;
+        left: 0;
+        right: 0;
+        top: -50px;
+
+        .buttons {
+            width: 45%;
+            text-align: center;
+            display: inline-block;
+
+
+            a {
+                i {
+                    padding: 10px;
+                    font-size: 1.4em;
+                }
+
+                color: $light-white;
+            }
+        }
+    }
+}
+
+.highlighted {
+    display: inline-block;
+    background-color: $primary-color;
+    color: $light-white;
+    padding: 10px;
+    border-radius: 5px;
+
+    a {
+        color: #fff;
+        font-weight: 600;
+    }
+}
+
 /* footer */
 .page-wrap {
   min-height: 100%;
@@ -322,7 +379,7 @@ footer {
 
 ul {
     li {
-        font-size: 1.2em;
+        font-size: 1em;
         line-height: 1.6em;
         margin-left: 20px;
         list-style: square;
