--- a/templates/single.html
+++ b/templates/single.html
@@ -6,6 +6,35 @@
 
 {% block body %}
 
+<!-- add-note modal -->
+<div aria-hidden="true" aria-labelledby="myModalLabel" role="dialog" data-username="{{user.username}}"
+     tabindex="-1" id="addNoteModal" class="modal fade" style="display: none;">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button aria-hidden="true" data-dismiss="modal" class="close" type="button">×</button>
+        <h4 class="modal-title">Write Your Note!</h4>
+      </div>
+      <div class="modal-body">
+
+        <div class="login-wrap">
+          <textarea type="text" placeholder="Type Your Note"
+                    id="noteArea" name="noteArea" class="form-control"></textarea>
+          <div class="tcenter">
+            <button class="btn btn-special btn-modal" onclick="addNote();">
+              <i class="fa fa-send"></i> Add Your Note
+            </button>
+          </div>
+        </div> <!-- end of login-wrap -->
+
+      </div>
+
+    </div>
+  </div>
+</div>
+<!-- end of add-note modal -->
+
+
 <div class="highlight-wrapper">
   <div class="highlight">
     <div class="buttons">
@@ -14,7 +43,7 @@
       </a>
     </div>
     <div class="buttons">
-      <a href="">
+      <a href="javascript:void(0)" onclick="toggleNoteModal();">
         <i class="fa fa-edit"></i>
       </a>
     </div>
@@ -26,7 +55,7 @@
    <div class="container">
      <div class="header-inner">
 
-       <div class="col-xs-7">
+       <div class="col-xs-12 col-md-10 col-lg-7">
          <h2>{{post.title}}</h2>
          <p>{{post.excerpt | truncate(200) | safe}}</p>
        </div>
@@ -47,6 +76,15 @@
    <div class="col-xs-12 col-md-10 col-lg-7">
 
      <div id="content">
+       <div class="originalarticle">
+         original article can be read
+         from <a href="{{post.url}}">{{post.domain}}</a> <br />
+         <div class="time">
+           saved <time class="timeago" datetime="{{post.saved_date}}"></time>
+         </div>
+         by {{post.author}}
+       </div>
+
        <h2>{{post.title}}</h2>
        <div class="content-data" data-id="{{post.id}}">
          {{post.content | safe}}
@@ -123,6 +161,9 @@
        }, 100);
    });
 
+  $(document).ready(function() {
+      $("time.timeago").timeago();
+  })
 
  </script>
 
