--- a/templates/snippets/posts.html
+++ b/templates/snippets/posts.html
@@ -16,12 +16,18 @@
           <a href="javascript:void(0)" class="edittag btn btn-info"
              data-id="{{post.id}}" data-title="{{post.title}}"
              data-url="{{post.url}}">
-            <i class="fa fa-tag"></i> add tag</a>
+            <i class="fa fa-tag"></i></a>
 
           <a href="javascript:void(0)" class="btn btn-info"
              data-id="{{post.id}}" data-title="{{post.title}}"
              data-url="{{post.url}}">
-            <i class="fa fa-share-alt"></i> share</a>
+            <i class="fa fa-share-alt"></i></a>
+
+          <a href="javascript:void(0)" class="deletepost btn btn-info"
+             data-id="{{post.id}}" data-title="{{post.title}}"
+             data-url="{{post.url}}">
+            <i class="fa fa-remove"></i></a>
+
         </div> <!-- end of add-tag -->
 
       </div>
