--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
    <div class="container">
      <div class="header-inner">
 
-       <div class="col-xs-6">
+       <div class="col-xs-12">
          <h2>reading.pub</h2>
          <p>read with pleasure</p>
        </div>
@@ -29,7 +29,7 @@
 
 
  <div class="container">
-   <div class="col-xs-5">
+   <div class="col-lg-5">
      <div class="panel">
        <div class="panel-heading">
          <h3>try reading.pub</h3>
@@ -63,7 +63,7 @@
      </div>   <!-- panel -->
    </div>     <!-- end of col-xs-6 -->
 
-   <div class="col-xs-5 col-xs-offset-2">
+   <div class="col-lg-5 col-lg-offset-2">
      <div class="panel">
        <div class="panel-heading">
          {% if user %}
