--- a/templates/snippets/navigation.html
+++ b/templates/snippets/navigation.html
@@ -13,7 +13,7 @@
     <i class="fa fa-sign-out"></i><span>logout</span></a>
   {% else %}
   <a href="/" class="navbutton">
-    <i class="fa fa-home"></i><span>anasayfa</span></a>
+    <i class="fa fa-home"></i><span>home</span></a>
   <a href="#newdocumentModal" data-toggle="modal"
      class="navbutton">
     <i class="fa fa-plus"></i><span>new document</span></a>
