--- a/static/sass/custom.scss
+++ b/static/sass/custom.scss
@@ -24,6 +24,11 @@ header.rp {
     padding-bottom: 20px;
     background-color: $primary-color;
     border-top: 6px solid $primary-color-alt;
+    text-align: center;
+
+    .left {
+        text-align: left;
+    }
 
     .container {
         height: 100%;
@@ -64,10 +69,12 @@ footer.rp {
     border-bottom: 1px solid $light-white;
 
     .navigationWrapper {
+        display: block;
+        text-align: center;
 
         .navbutton {
-            display: table;
-            float: left;
+            display: inline-block;
+            /* float: left; */
             background-color: #fff;
             border-bottom: 3px solid #fff;
             font-variant: small-caps;
@@ -192,6 +199,17 @@ footer.rp {
         margin: 15px auto;
         position: relative;
 
+        .postnote {
+            position: absolute;
+            width: 100%;
+            z-index: 1;
+            background-color: rgba(0,0,0, 0.6);
+            color: $white;
+            padding: 15px;
+            text-align: center;
+            bottom: 0;
+        }
+
         .thumb {
             width: 100%;
             height: 200px;
@@ -219,6 +237,7 @@ footer.rp {
             .thumbnail-hover {
                 display: table-cell;
                 position: absolute;
+                z-index: 5;
                 top: 0;
                 left: 0;
                 bottom: 0;
@@ -233,7 +252,7 @@ footer.rp {
                     margin: auto;
                     position: absolute;
                     top: 0; left: 0; bottom: 0; right: 0;
-                    width: 200px;
+                    width: 250px;
                     height: 30px;
                     text-align: center;
                     font-variant: small-caps;
@@ -269,6 +288,7 @@ footer.rp {
 .tags {
     padding: 10px;
     font-variant: small-caps;
+    text-align: center;
 
     .tag {
         border: 1px solid $soft-black;
@@ -353,6 +373,16 @@ footer.rp {
     }
 }
 
+.ayrac {
+    background-color: $primary-color;
+    padding: 20px 0;
+    text-align: center;
+    color: $white;
+    font-variant: small-caps;
+    font-weight: 600;
+    margin-top: 30px;
+}
+
 
 /* footer */
 .page-wrap {
@@ -417,7 +447,7 @@ ul {
     /* icons inside buttos */
     i {
         &.fa {
-            margin: auto 7px auto auto;
+            margin: 5px;
         }
     }
 
@@ -448,3 +478,7 @@ ul {
     }
 }
 /* end of generics */
+
+a.sharetag {
+    color: #428BCA;
+}
