--- a/templates/profile.html
+++ b/templates/profile.html
@@ -43,13 +43,89 @@
 <!-- end of edittag modal -->
 
 
+
+<!-- takenote modal -->
+<div aria-hidden="true" aria-labelledby="myModalLabel" role="dialog"
+     tabindex="-1" id="takenoteModal" class="modal fade" style="display: none;">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button aria-hidden="true" data-dismiss="modal" class="close" type="button">×</button>
+        <h4 class="modal-title">Take a Note</h4>
+      </div>
+      <div class="modal-body">
+        <!-- login form starts here -->
+
+        <form role="form" action="/post/note/add" method="POST" class="form-signin">
+          <div class="login-wrap">
+            <div id="titleSpan" style="text-align: center; margin: 10px;"></div>
+
+            <input type="hidden" id="idInputNote" name="id" value="" />
+            <input id="noteInputModal" name="note" type="text" autofocus=""
+                   placeholder="write your note to here" class="form-control">
+            <div class="tcenter">
+              <button class="btn btn-special btn-modal" type="submit">
+                <i class="fa fa-plus"></i> Take Your Note
+              </button>
+            </div>
+          </div> <!-- end of login-wrap -->
+
+
+        </form>
+        <!-- takenote form ends here -->
+      </div>
+
+    </div>
+  </div>
+</div>
+<!-- end of takenote modal -->
+
+
+<!-- sharesingle modal -->
+<div aria-hidden="true" aria-labelledby="myModalLabel" role="dialog"
+     tabindex="-1" id="sharesingleModal" class="modal fade" style="display: none;">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button aria-hidden="true" data-dismiss="modal" class="close" type="button">×</button>
+        <h4 class="modal-title">Share With E-Mail</h4>
+      </div>
+      <div class="modal-body">
+        <!-- login form starts here -->
+
+        <form role="form" action="/post/share/" method="POST" class="form-signin">
+          <div class="login-wrap">
+            <div id="titleSpan" style="text-align: center; margin: 10px;"></div>
+
+            <input type="hidden" id="idInputShare" name="id" value="" />
+            <textarea type="text" placeholder="Mail Addresses - Line by line"
+                      id="recepients" name="recepients" class="form-control"></textarea>
+
+            <div class="tcenter">
+              <button class="btn btn-special btn-modal" type="submit">
+                <i class="fa fa-plus"></i> Share
+              </button>
+            </div>
+          </div> <!-- end of login-wrap -->
+
+
+        </form>
+        <!-- sharesingle form ends here -->
+      </div>
+
+    </div>
+  </div>
+</div>
+<!-- end of sharesingle modal -->
+
+
 <div class="page-wrap">
 
  <header class="rp">
    <div class="container">
      <div class="header-inner">
 
-       <div class="col-xs-6">
+       <div class="col-xs-12">
          <h2>reading.pub</h2>
          <p>read with pleasure</p>
        </div>
