--- a/templates/single.html
+++ b/templates/single.html
@@ -55,7 +55,7 @@
    <div class="container">
      <div class="header-inner">
 
-       <div class="col-xs-12 col-md-10 col-lg-7">
+       <div class="col-xs-12 col-md-10 col-lg-7 left">
          <h2>{{post.title}}</h2>
          <p>{{post.excerpt | truncate(200) | safe}}</p>
        </div>
