--- a/templates/snippets/posts.html
+++ b/templates/snippets/posts.html
@@ -11,22 +11,37 @@
         <div class="please"></div>
       </div>
       {% endif %}
+      {% if post.note %}
+      <div class="postnote">
+        `{{ post.note }}´
+      </div>
+      {% endif %}
+
       <div class="thumbnail-hover">
         <div class="add-tag">
-          <a href="javascript:void(0)" class="edittag btn btn-info"
+          <a href="javascript:void(0)" class="edittag btn btn-info tooltips"
              data-id="{{post.id}}" data-title="{{post.title}}"
-             data-url="{{post.url}}">
+             data-toggle="tooltip" data-url="{{post.url}}"
+             data-original-title="Insert New Tag" data-placement="bottom">
             <i class="fa fa-tag"></i></a>
 
-          <a href="javascript:void(0)" class="btn btn-info"
+          <a href="javascript:void(0)" class="sharesingle btn btn-info tooltips"
              data-id="{{post.id}}" data-title="{{post.title}}"
-             data-url="{{post.url}}">
+             data-url="{{post.url}}" data-toggle="tooltip"
+             data-original-title="Share Post" data-placement="bottom">
             <i class="fa fa-share-alt"></i></a>
 
-          <a href="javascript:void(0)" class="deletepost btn btn-info"
+          <a href="javascript:void(0)" class="deletepost btn btn-info tooltips"
              data-id="{{post.id}}" data-title="{{post.title}}"
-             data-url="{{post.url}}">
+             data-url="{{post.url}}" data-toggle="tooltip"
+             data-original-title="Delete Post" data-placement="bottom">
             <i class="fa fa-remove"></i></a>
+
+          <a href="javascript:void(0)" class="takenote btn btn-info tooltips"
+             data-id="{{post.id}}" data-title="{{post.title}}"
+             data-url="{{post.url}}" data-toggle="tooltip"
+             data-original-title="Take Note" data-placement="bottom">
+            <i class="fa fa-pencil"></i></a>
 
         </div> <!-- end of add-tag -->
 
@@ -59,8 +74,6 @@
     <div class="domain">
       ({{post.domain}})
     </div>
-
-
 
   </div> <!-- end of post -->
 </div>
